page.date->post.date

--- a/404.html
+++ b/404.html
@@ -1,7 +1,8 @@
 ---
 layout:         page
-title:          出错啦！
+title:          not found.
 ---
 <h1>404</h1>
 
 <p>This is not the web page you are looking for.</p>
+<p>返回 主页 <a href="http://linfeng365.com">http://linfeng365.com</a></p>
